--- a/package.json
+++ b/package.json
@@ -9,13 +9,34 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.10.6",
+    "@emotion/styled": "^11.10.6",
+    "@fontsource/roboto": "^4.5.8",
+    "@headlessui/react": "^1.7.14",
+    "@heroicons/react": "^2.0.17",
+    "@mapbox/mapbox-gl-geocoder": "^4.7.4",
+    "@mui/material": "^5.12.0",
+    "@svgr/webpack": "^7.0.0",
+    "@types/mapbox__mapbox-gl-geocoder": "^4.7.2",
+    "@types/node": "^18.15.11",
+    "@types/react": "^18.0.35",
+    "antd": "^5.4.2",
     "autoprefixer": "10.4.14",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "file-loader": "^6.2.0",
+    "flowbite": "^1.6.5",
+    "flowbite-react": "^0.4.3",
+    "mapbox-gl": "^2.14.1",
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.1"
+    "react-map-gl": "^7.0.23",
+    "react-map-gl-geocoder": "^2.2.0",
+    "tailwindcss": "^3.3.1"
+  },
+  "devDependencies": {
+    "typescript": "5.0.4"
   }
 }
