--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^1.7.14",
     "@heroicons/react": "^2.0.17",
     "@mapbox/mapbox-gl-geocoder": "^4.7.4",
+    "@material-ui/core": "^4.12.4",
     "@mui/material": "^5.12.0",
     "@mui/x-data-grid": "^6.2.0",
     "@svgr/webpack": "^7.0.0",
@@ -24,8 +25,10 @@
     "antd": "^5.4.2",
     "autoprefixer": "10.4.14",
     "axios": "^1.3.5",
+    "chart.js": "^4.2.1",
     "eslint": "8.38.0",
     "eslint-config-next": "13.3.0",
+    "faker": "5.5.3",
     "file-loader": "^6.2.0",
     "flowbite": "^1.6.5",
     "flowbite-react": "^0.4.3",
@@ -33,6 +36,7 @@
     "next": "13.3.0",
     "postcss": "8.4.22",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.23",
     "react-map-gl-geocoder": "^2.2.0",
