--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "ngrok": "ngrok http 3000"
   },
   "dependencies": {
     "@emotion/react": "^11.10.6",
@@ -43,6 +44,7 @@
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
+    "ngrok": "^4.3.3",
     "typescript": "5.0.4"
   }
 }
