--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-dom": "18.2.0",
     "react-map-gl": "^7.0.23",
     "react-map-gl-geocoder": "^2.2.0",
+    "tailwind-datepicker-react": "^1.3.0",
     "tailwindcss": "^3.3.1"
   },
   "devDependencies": {
